--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             price="12000"
             alt=""
             width="100%"
-            height="400px"
+            name="First Dress"
           />
-          <h2>Price: <span style="font-weight: lighter;"> 12000</span></h2>
-
+          <h2>Price: <span style="font-weight: lighter"> 12000</span></h2>
         </div>
         <div class="element ele">
           <img
@@ -27,10 +26,19 @@
             price="8000"
             alt=""
             width="100%"
-            height="400px"
+            name="Second Dress"
           />
-          <h2>Price: <span style="font-weight: lighter;">8000</span></h2>
-
+          <h2>Price: <span style="font-weight: lighter">8000</span></h2>
+        </div>
+        <div class="element ele">
+          <img
+            src="./Images/dress1.jpg"
+            price="7500"
+            alt=""
+            width="100%"
+            name="Third Dress"
+          />
+          <h2>Price: <span style="font-weight: lighter"> 7500</span></h2>
         </div>
         <div class="element">
           <img
@@ -38,42 +46,9 @@
             price="10000"
             alt=""
             width="100%"
-            height="400px"
+            name="Fourth Dress"
           />
-          <h2>Price: <span style="font-weight: lighter;"> 10000</span></h2>
-
-        </div>
-      </div>
-      <div class="elements">
-        <div class="element ele">
-          <img
-            src="./Images/dress1.jpg"
-            price="7500"
-            alt=""
-            width="100%"
-            height="400px"
-          />
-          <h2>Price: <span style="font-weight: lighter"> 7500</span></h2>
-        </div>
-        <div class="element ele">
-          <img
-            src="./Images/dress3.jpg"
-            price="4000"
-            alt=""
-            width="100%"
-            height="400px"
-          />
-          <h2>Price: <span style="font-weight: lighter"> 4000</span></h2>
-        </div>
-        <div class="element">
-          <img
-            src="./Images/dress4.jpg"
-            price="11000"
-            alt=""
-            width="100%"
-            height="400px"
-          />
-          <h2>Price: <span style="font-weight: lighter"> 11000</span></h2>
+          <h2>Price: <span style="font-weight: lighter"> 10000</span></h2>
         </div>
       </div>
       <div class="elements">
@@ -83,7 +58,7 @@
             price="7000"
             alt=""
             width="100%"
-            height="400px"
+            name="Fifth Dress"
           />
           <h2>Price: <span style="font-weight: lighter"> 7000</span></h2>
         </div>
@@ -93,32 +68,51 @@
             price="14000"
             alt=""
             width="100%"
-            height="400px"
+            name="Sixth Dress"
           />
           <h2>Price: <span style="font-weight: lighter"> 14000</span></h2>
         </div>
+        <div class="element ele">
+          <img
+            src="./Images/dress3.jpg"
+            price="4000"
+            alt=""
+            width="100%"
+            name="Seventh Dress"
+          />
+          <h2>Price: <span style="font-weight: lighter"> 4000</span></h2>
+        </div>
         <div class="element">
+          <img
+            src="./Images/dress4.jpg"
+            price="11000"
+            alt=""
+            width="100%"
+            name="Eighth Dress"
+          />
+          <h2>Price: <span style="font-weight: lighter"> 11000</span></h2>
+        </div>
+      </div>
+      <div class="elements">
+        <div class="element ele">
           <img
             src="./Images/bride2.jpg"
             price="15300"
             alt=""
             width="100%"
-            height="400px"
+            name="Ninth Dress"
           />
           <h2>Price: <span style="font-weight: lighter"> 15300</span></h2>
         </div>
-      </div>
-      <div class="elements">
         <div class="element">
-            <img
+          <img
             src="./Images/bride1.webp"
             price="15000"
             alt=""
             width="100%"
-            height="400px"
+            name="Last Dress"
           />
           <h2>Price: <span style="font-weight: lighter"> 15000</span></h2>
-
         </div>
       </div>
     </div>
